Fix activity-timeline items should not wrap margin

--- a/src/styles/activity.scss
+++ b/src/styles/activity.scss
@@ -31,7 +31,8 @@
 
 
 .timeline-padding {
-  width: 40px;
+  width: 26px;
+  min-width: 26px;
 }
 
 
